Wallpapers are selected from the users filesystem.
An interactive crop dialog helps save a crop based on the ratio seen when last connecting to the car.

Users can add or remove wallpapers to theirl list and pressing the action button in the car cycles through them.

--- a/automotive/src/main/res/values/themes.xml
+++ b/automotive/src/main/res/values/themes.xml
@@ -1,4 +1,10 @@
 <resources>
 
     <style name="Theme.AutoWallpaper" parent="android:Theme.Material.Light.DarkActionBar" />
+    <style name="ManageWallpaperActivityTheme" parent="Theme.AppCompat.NoActionBar" />
+
+    <style name="ShapeAppearance.App.RoundedCorners" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item> <!-- You can adjust this value -->
+    </style>
 </resources>
